style.css
:root {
    --color1:  #394A59;
    --color2:  #D9CBA3;
    --color3:  #BF9B7A;
    --color4:  #F28B66;
    --color5:  #D96262;

    --color6:  #05080D;
    --color7:  #141A26;
    --color8:  #516073;
    --color9:  #A8B5BF;
    --color10: #F2F2F2;

    --color11: #82BF56;
}

/* Color Theme Swatches in Hex */

html, body {
    padding: 0;
    margin: 0;
    font-family: 'Zen Old Mincho', serif;
}

.container {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

/* Header */

.header {
    display: flex;
    gap: 1rem;
    background-color: var(--color2);
    color: var(--color1);
    padding: 1rem 0 1rem 1rem;
    border-bottom: 1px solid var(--color1);
    z-index: 1;
    box-shadow: 0 0.4rem 2rem -0.2rem;
}

.header h1 {
    font-weight: 900;
    font-size: 3rem;
    margin: 0;
}

/* Books */

.books-container {
    flex: 1 0 auto;
    padding: 2rem 6rem;
    background-color: var(--color3);
}

/* Card */

.book-card {
    position: relative;
    width: 12rem;
    height: 18rem;
    background-color: var(--color10);
    box-shadow: 0 0.3rem 1rem 0.1rem rgba(57, 74, 89, 0.5), 0 6px 20px 0 rgba(57, 74, 89, 0.5);
}

.book-info {
    visibility: hidden;
    opacity: 0;
    transition: 0.5s ease;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    color: var(--color6);
    font-size: 1.1rem;
}

.book-prop {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 0.2rem;
    flex: 1 0 auto;
}

.prop {
    font-weight: 900;
    padding: 0 0.2rem;
}

#book-title, #book-author, #book-pages {
    font-weight: 700;
    color: var(--color8);
}

.book-card #book-img {
    transition: opacity 1s;
    width: 100%;
    height: 18rem
}

.book-card:hover #book-img {
    opacity: 0.1;
}

.book-card:hover .book-info {
    visibility: visible;
    opacity: 1;
}

#checkmark {
    margin-left: 0.4rem;
    cursor: pointer;
}

/* Card buttons */

.buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2rem;
    opacity: 1;
    height: 3rem;
    margin-bottom: 0.5rem;
}

#edit, #delete {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    border: none;
    font-size: 1.5rem;
    width: 3rem;
    height: 3rem;
    border-radius: 1.5rem;
}

#edit {
    background-color: #02734A;
    color: var(--color11);
}

#delete {
    background-color: #D91424;
    color: var(--color4);
}

#edit:hover, #delete:hover {
    transform: scale(1.1, 1.1);
    transition: transform 0.3s;
    color: white;
}

/* Float button */

.float {
    position: fixed;
    cursor: pointer;
    width: 4rem;
    height: 4rem;
    bottom: 5rem;
    right: 1.5rem;
    background-color: var(--color11);
    color: var(--color10);
    border-radius: 2rem;
    text-align: center;
    box-shadow: 0 0.3rem 1rem 0.1rem rgba(25, 33, 39, 0.5), 0 6px 20px 0 rgba(38, 48, 58, 0.5);
}

.float:hover {
    animation: rotation 1s;
}

.float-btn {
    font-size: 1.5rem;
    margin-top: 1.27rem;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

/* Modal */

.modal-container {
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.3);
}

.modal {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border: 1px solid black;
    background-color: #02734A;
    color: var(--color1);
}

.modal-header {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    font-size: 1.3rem;
    color: var(--color11);
}

.modal-header #add-square {
    font-size: 2rem;
}

.modal-header h2 {
    margin: 0;
    padding-bottom: 0.4rem;
}

.new-book {
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
    background-color: var(--color10);
    gap: 1rem;
    padding: 1rem;
}

.input {
    display: flex;
    justify-content: space-between;
    font-size: 1.2rem;
    gap: 1rem;
}

#pages, #read {
    align-self: flex-start;
}

.add-btn {
    display: flex;
    align-self: center;
    margin: 0.3rem 0;
}

.add-btn button:hover {
    color: var(--color10);
}

.add-btn button {
    color: var(--color11);
    background-color: transparent;
    cursor: pointer;
    border: none;
    font-size: 1.5rem;
}

/* Footer */

.footer {
    display: flex;
    align-items: center;
    gap: 1rem;
    justify-content: center;
    align-content: center;
    padding: 0.5rem 0;
    background-color: var(--color2);
    color: var(--color1);
    box-shadow: 0.4rem 0 2rem 0.2rem;
}

.footer h2 {
    margin: 0;
    font-weight: 700;
}

.footer a {
    display: flex;
}

/* GitHub animation */
@keyframes githubAnimation {
    0%   {transform: scale(1, 1);}
    25%  {transform: scale(1.5, 0.8);}
    50%  {transform: scale(0.5, 1.1);}
    75%  {transform: scale(1, 0.8);}
    100% {transform: scale(1, 1);}
}

.github-logo:hover {
    position: relative;
    animation-name: githubAnimation;
    animation-duration: 2s;
}

